outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval6115983817693399058_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, historical path influence, and predictive tour quality, where weights are adjusted based on the current phase (exploration vs. exploitation) and node characteristics, favoring nodes with high immediate relevance and long-term potential while penalizing those with high uncertainty or redundancy.}
                                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, historical path influence, and predictive tour quality, where weights are adjusted based on the current phase (exploration vs. exploitation) and node characteristics, favoring nodes with high immediate relevance and long-term potential while penalizing those with high uncertainty or redundancy.}
                                                                                                                                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'
